Adicionei um paragrafo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, repellat corrupti aperiam ex commodi repellendus culpa magni quam quibusdam, aliquid, quaerat maxime? Id, natus nobis? Quae architecto ad voluptatem molestias!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex voluptatum reprehenderit dolore a reiciendis porro distinctio voluptates inventore, sint quod repellat illum minus itaque accusantium at sit perferendis, perspiciatis ipsum.</p>
     
 </body>
 </html>
